--- a/assets/index_template.html
+++ b/assets/index_template.html
@@ -35,6 +35,7 @@
       display: block;
       box-shadow: 0 0 0 1px rgba(0, 0, 0, .12);
       overflow: hidden;
+      background-color: white;
     }
 
     .artboard:not(.is-active) {
@@ -372,6 +373,7 @@
 
         prevArtboard.classList.remove('is-active');
         artboard.classList.add('is-active');
+        artboard.style.zIndex = this.historyStack.length;
         this.resize();
 
         this.historyStack.push({ artboard, animationType });
